# musicApp_test_task

music/: README.md  docker-compose.yml  pyproject.toml
music/config/: settings.py  urls.py
music/src/addition/: absctract_model.py
music/src/author/: apps.py  models.py  serializers.py  urls.py  views.py
music/src/author/migrations/: 0001_initial.py
music/src/song/: apps.py
